--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: ecespa
 Type: Package
 Title: Functions for spatial point pattern analysis
-Version: 1.0-2
-Date: 2007-11-04
+Version: 1.0-3
+Date: 2007-11-11
 Author: Marcelino de la Cruz Rot, with contributions of Philip M. Dixon
 Maintainer: Marcelino de la Cruz Rot <marcelino.delacruz@upm.es>
 Depends: splancs, spatstat, fields, akima
-Description: Some wrappers, functions and data for for spatial point pattern analysis, used in the book on Spatial Ecology of the ECESPA/AEET
+Description: Some wrappers, functions and data sets for for spatial point pattern analysis, used in the book "Introduccion al Analisis Espacial de Datos en Ecologia y Ciencias Ambientales: Metodos y Aplicaciones".
 License: GPL (>=2)
-Packaged: Sun Nov  4 20:10:43 2007; MCR
+Packaged: Sun Nov 11 14:29:34 2007; MCR
