--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: ecespa
 Type: Package
 Title: Functions for spatial point pattern analysis
-Version: 1.1-2
-Date: 2009-08-25
-Author: Marcelino de la Cruz Rot, with contributions of Philip M. Dixon
-        and Jose M. Blanco-Moreno
+Version: 1.1-3
+Date: 2010-01-09
+Author: Marcelino de la Cruz Rot, Philip M. Dixon and Jose M.
+        Blanco-Moreno
 Maintainer: Marcelino de la Cruz Rot <marcelino.delacruz@upm.es>
 Depends: splancs, spatstat (>= 1.4.0), fields, akima
 Description: Some wrappers, functions and data sets for for spatial
@@ -14,6 +14,6 @@ Description: Some wrappers, functions and data sets for for spatial
 License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
-Packaged: 2009-08-25 10:01:05 UTC; MCR
+Packaged: 2010-01-10 13:48:17 UTC; MCR
 Repository: CRAN
-Date/Publication: 2009-08-25 17:33:22
+Date/Publication: 2010-01-11 07:42:43
