--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: ecespa
 Type: Package
 Title: Functions for spatial point pattern analysis
-Version: 1.1-04
-Date: 2010-04-12
-Author: Marcelino de la Cruz Rot, Philip M. Dixon and Jose M.
-        Blanco-Moreno
+Version: 1.1-5
+Date: 2012-09-05
+Author: Marcelino de la Cruz Rot, with contributions of Philip M. Dixon
+        and Jose M. Blanco-Moreno
 Maintainer: Marcelino de la Cruz Rot <marcelino.delacruz@upm.es>
 Depends: splancs, spatstat (>= 1.4.0), fields, akima
 Description: Some wrappers, functions and data sets for for spatial
@@ -14,6 +14,6 @@ Description: Some wrappers, functions and data sets for for spatial
 License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
-Packaged: 2010-04-12 18:19:19 UTC; MCR
+Packaged: 2012-09-04 15:19:23 UTC; MCR
 Repository: CRAN
-Date/Publication: 2010-04-12 18:51:24
+Date/Publication: 2012-09-04 15:46:29
