--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: ecespa
 Type: Package
 Title: Functions for spatial point pattern analysis
-Version: 1.1-5
-Date: 2012-09-05
+Version: 1.1-7
+Date: 2013-03-12
 Author: Marcelino de la Cruz Rot, with contributions of Philip M. Dixon
         and Jose M. Blanco-Moreno
 Maintainer: Marcelino de la Cruz Rot <marcelino.delacruz@upm.es>
-Depends: splancs, spatstat (>= 1.4.0), fields, akima
+Depends: splancs, spatstat (>= 1.4.0)
 Description: Some wrappers, functions and data sets for for spatial
         point pattern analysis (mainly based on spatstat), used in the
         book "Introduccion al Analisis Espacial de Datos en Ecologia y
@@ -14,6 +14,7 @@ Description: Some wrappers, functions and data sets for for spatial
 License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
-Packaged: 2012-09-04 15:19:23 UTC; MCR
+Packaged: 2013-03-13 16:05:08 UTC; mc
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2012-09-04 15:46:29
+Date/Publication: 2013-03-13 17:23:16
