--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,16 @@
 Package: ecespa
 Type: Package
-Title: Functions for spatial point pattern analysis
-Version: 1.1-7
-Date: 2013-03-12
-Author: Marcelino de la Cruz Rot, with contributions of Philip M. Dixon
-        and Jose M. Blanco-Moreno
+Title: Functions for Spatial Point Pattern Analysis
+Version: 1.1-8
+Date: 2015-06-23
+Author: Marcelino de la Cruz Rot, with contributions of Philip M. Dixon and Jose M. Blanco-Moreno
 Maintainer: Marcelino de la Cruz Rot <marcelino.delacruz@upm.es>
 Depends: splancs, spatstat (>= 1.4.0)
-Description: Some wrappers, functions and data sets for for spatial
-        point pattern analysis (mainly based on spatstat), used in the
-        book "Introduccion al Analisis Espacial de Datos en Ecologia y
-        Ciencias Ambientales: Metodos y Aplicaciones".
+Description: Some wrappers, functions and data sets for for spatial point pattern analysis (mainly based on spatstat), used in the book "Introduccion al Analisis Espacial de Datos en Ecologia y Ciencias Ambientales: Metodos y Aplicaciones".
 License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
-Packaged: 2013-03-13 16:05:08 UTC; mc
 NeedsCompilation: yes
+Packaged: 2015-07-03 20:20:22 UTC; marcelino
 Repository: CRAN
-Date/Publication: 2013-03-13 17:23:16
+Date/Publication: 2015-07-04 08:42:13
